<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Tree Map India 23 Sept 2013</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="formname">Tree Census Survey Form</string>
    <string name="ward_no">Enter Prabhag No.</string>
    <string name="tree_no">Enter Tree No.</string>
    <string name="rare">Rare</string>
    <string name="vuln">Vulnerable</string>
    <string name="edan">Endangered</string>
    <string name="pa">Pest Affected</string>
    <string name="man_type">Nuisance on tree</string>
    <string name="poster">Posters</string>
    <string name="wires">Wires</string>
    <string name="nest">Nest</string>
    <string name="tg">Tree Guards</string>
    <string name="Poly_no">Enter Cluster No.</string>
    <string name="spa">Special</string>
    <string name="in">Injured</string>
    <string name="s_or">Enter Other Reason</string>
    <string name="out_boundary">Outside Boundary</string>
    <string name="in_boundary">Enclosed Boundary</string>
    <string name="pavement">Pavement/FootPath</string>
    <string name="o_name">Enter Owner Name</string>
    <string name="div">Divider</string>
    <string name="pdesc">Enter Property Description</string>
    <string name="suno">Enter Survey No.</string>
    <string name="area">Enter Area in square foot</string>
    <string name="srval">13</string>
    <string name="hno">Enter House No.</string>
    <string name="not">Name of Tree :</string>
    <string name="bn">Botanical Name :</string>
    <string name="ebn">Enter botanical Name</string>
    <string name="height">Height :</string>
    <string name="girth">Girth :</string>
    <string name="ft">Ft</string>
    <string name="mt">mt</string>
    <string name="cm">cm</string>
    <string name="inft">Feet</string>
    <string name="inmt">Meter</string>
    <string name="incm">CentiMeter</string>
    <string name="fot">Found on Tree</string>
    <string name="hot">Health of Tree</string>
    <string name="fog">Ground Condition</string>
    <string name="rot">Hazards due to Tree</string>
    <string name="rem">Remarks/Notes</string>
    <string name="nails">Nails</string>
    <string name="pf">Pods/Fruits</string>
    <string name="flw">Flowers</string>
    <string name="buw">Burrows</string>
    <string name="dis">Diseased</string>
    <string name="health">Healthy</string>
    <string name="hl">Heavily Lopped</string>
    <string name="nl">Nails and greater than 5mm</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="ok">OK</string>
    <string name="os">Open Soil</string>
    <string name="tile">Tiled</string>
    <string name="cem">Cemented</string>
    <string name="cs">Compressed Soil</string>
    <string name="sin">Space is nil</string>
    <string name="on_g2">02ft Ground</string>
    <string name="on_g4">02ft to 04ft</string>
    <string name="on_g6">04ft to 06ft</string>
    <string name="on_g8">06ft and above</string>
    <string name="gw_or">Growing against wall</string>
    <string name="gd_or">Growing against Drainage</string>
    <string name="no_or">No Risk</string>
    <string name="ot_or">Other</string>
    <string name="exit">Exit</string>
    <string name="r_or">Enter Risk</string>
    <string name="txtAddTree">Add Trees</string>
    <string name="txtExit">Exit</string>
    <string name="txtTrack">Start Tracking</string>
    <string name="txtExport">Export Data</string>
    <string name="space"></string>
    <string name="txtListSessions">List Sessions</string>
    <string name="txtEnterTreeNumber">Enter Tree Number</string>
    <string name="txtEnterTreeName">Enter Tree Name</string>
    <string name="txtChangeArea">Change Area</string>
    <string name="txtTakePicture">Take Picture</string>
    <string name="txtSave">Save</string>
    <string name="txtReferToDept">Refer to Department</string>
    <string name="treeKey">Tree Name</string>
    <string name="title_activity_list_trees_in_session">ListTreesInSessionActivity</string>
    <string name="title_activity_view_tree_detail">ViewTreeDetailActivity</string>
    <string name="txtTreeNumber">Tree Number</string>
    <string name="txtTreeName">Tree Name</string>
    <string name="txtPrabhagId">Prabhag no.</string>
    <string name="txtClusterId">Cluster no.</string>
    <string name="txtPropertyType">Property Type</string>
    <string name="txtBotanicalName">Botanical Name</string>
    <string name="txtGirth">Girth in meter</string>
    <string name="txtHeight">Height in meter</string>
    <string name="txtNest">Nest</string>
    <string name="txtBurrows">Burrows</string>
    <string name="txtFlowers">Flowers</string>
    <string name="txtFruits">Fruits</string>
    <string name="txtNails">Nails</string>
    <string name="txtPoster">Poster</string>
    <string name="txtWires">Wires</string>
    <string name="txtTreeGuard">Tree Guard</string>
    <string name="txtOtherNuissanceDesc">Other Nuissance</string>
    <string name="txtHealthOfTree">Health of tree</string>
    <string name="txtGroundType">Ground Type</string>
    <string name="txtRisk">Risk due to tree</string>
    <string name="txtRiskDesc">Risk Detail</string>
    <string name="txtSpecialDesc">Special</string>
    <string name="txtLatitude">Latitude</string>
    <string name="txtLongitude">Longitude</string>
    <string name="txtPoint">Point</string>
    <string name="txtCreationDate">Creation Date</string>
    <string name="txtCreationTime">Creation Time</string>
    <string name="txtSurveyorName">Surveyor Name</string>
    <string name="txtFoundOnTree">Found on tree</string>
    <string name="txtEdit">Edit</string>
    <string name="txtDelete">Delete</string>
    <string name="txtCancel">Cancel</string>
    <string name="hintHeight">Enter height</string>
    <string name="hintGirth">Enter girth</string>

</resources>