<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radio_fog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|left"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_cs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cs" />

            <RadioButton
                android:id="@+id/radio_cem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cem" />

            <RadioButton
                android:id="@+id/radio_tile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tile" />

            <RadioButton
                android:id="@+id/radio_os"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/os" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_ost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="13dp"
            android:visibility="gone" >

            <RadioButton
                android:id="@+id/radio_o2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_g2" />

            <RadioButton
                android:id="@+id/radio_o4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_g4" />

            <RadioButton
                android:id="@+id/radio_o6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_g6" />

            <RadioButton
                android:id="@+id/radio_o8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_g8" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>