<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|left"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/chknest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nest" />

        <CheckBox
            android:id="@+id/chkpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pf" />

        <CheckBox
            android:id="@+id/chkflw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flw" />

        <CheckBox
            android:id="@+id/chkbur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buw" />

        <CheckBox
            android:id="@+id/chknone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none" />
    </LinearLayout>

</ScrollView>