<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radio_rot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_gd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gd_or" />

            <RadioButton
                android:id="@+id/radio_gw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gw_or" />

            <RadioButton
                android:id="@+id/radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <RadioButton
                android:id="@+id/radio_ot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ot_or" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_rot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/r_or"
            android:visibility="gone" >

            <requestFocus />
        </EditText>
    </LinearLayout>

</ScrollView>