<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|left"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/chkrtd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtReferToDept" />

            <CheckBox
                android:id="@+id/chk_s_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <CheckBox
                android:id="@+id/chk_s_oth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ot_or" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/s_other_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/s_or"
                android:visibility="gone" >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

</ScrollView>